--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "react-native-blur": "^0.4.2"
   },
   "peerDependencies": {
-    "react-native": ">= 0.4.3"
+    "react-native": ">= 0.6.0-rc"
   }
 }
